fix: align date table

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -120,17 +120,6 @@ button.primary-btn {
   color: #6B7280;
 }
 
-.table-th:nth-child(2),
-.table-th:nth-child(3),
-.table-th:nth-child(4),
-.table-th:last-child,
-.table-td:nth-child(3),
-.table-td:nth-child(4),
-.table-td:last-child {
-  text-align: center;
-}
-
-
 :host-context(body.dark) .table-th {
   color: #9CA3AF;
 }
@@ -338,12 +327,4 @@ body.dark .icon-chat {
   }
 }
 
-.status-pendente {
-  background: #fef9c3;
-  color: #854d0e;
-}
 
-:host-context(body.dark) .status-pendente {
-  background: #713f12;
-  color: #fef08a;
-}
